# TiendaVirtualB

./: pyproject.toml
tiendavirtual/productos/: models.py  views.py
tiendavirtual/productos/migrations/: 0001_initial.py  0002_alter_producto_table.py  0003_alter_producto_imagenurlproducto.py
tiendavirtual/tiendas/: models.py  serializers.py  views.py
tiendavirtual/tiendas/migrations/: 0001_initial.py  0002_alter_tienda_table.py  0003_tienda_urlimgtienda.py  0004_alter_tienda_urlimgtienda.py
tiendavirtual/tiendavirtual/: settings.py  urls.py
tiendavirtual/usuarios/: models.py  serializers.py  signals.py  views.py
tiendavirtual/usuarios/migrations/: 0001_initial.py
